--- a/examples/maternal-smoking/smoking.ipynb
+++ b/examples/maternal-smoking/smoking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuUr3C7aHMWT16DOXgl1Yg",
+      "authorship_tag": "ABX9TyO++W4FW0DepwOBufapN57i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lwP2QUWcE-qG",
-        "outputId": "dfbecc9d-8cd6-4a3a-c91b-24605d6badb3"
+        "outputId": "c5d64511-e103-4ce0-d629-9dcd8d9064fa"
       },
       "execution_count": 2,
       "outputs": [
@@ -86,7 +86,7 @@
           "height": 206
         },
         "id": "ZkziwPBjFGpM",
-        "outputId": "0ed23702-4032-4176-fac8-c1b2d28d1452"
+        "outputId": "0242a042-585f-4413-d637-b9ce8947c5e6"
       },
       "execution_count": 3,
       "outputs": [
@@ -117,7 +117,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b917ec18-1cd9-4ff6-a191-0fe7b285064b\">\n",
+              "  <div id=\"df-a22d6291-123b-41bc-a822-511202cc6dec\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -278,7 +278,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b917ec18-1cd9-4ff6-a191-0fe7b285064b')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a22d6291-123b-41bc-a822-511202cc6dec')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -329,12 +329,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b917ec18-1cd9-4ff6-a191-0fe7b285064b button.colab-df-convert');\n",
+              "          document.querySelector('#df-a22d6291-123b-41bc-a822-511202cc6dec button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b917ec18-1cd9-4ff6-a191-0fe7b285064b');\n",
+              "          const element = document.querySelector('#df-a22d6291-123b-41bc-a822-511202cc6dec');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -362,10 +362,181 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Q1. Does the mom's smoking pattern affect the newborn birth weight?"
+      ],
+      "metadata": {
+        "id": "YEvzA3RdX9BD"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "PfI_wBBZFLhz"
+        "id": "gezYMdWciSuQ"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Q2. Does the mom’s race affect the newborn birth weight?\n"
+      ],
+      "metadata": {
+        "id": "ES5mZnyhYQ-5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6fQAD4OkYJr9"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Q3. Is there a correlation between the mom’s weight and the baby’s weight?\n"
+      ],
+      "metadata": {
+        "id": "3GVJ6vVTYai-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3-K9ReE0iuGZ"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Q4. Is there a correlation between the dad’s weight and the baby’s weight?"
+      ],
+      "metadata": {
+        "id": "0tlqNIxRiuj1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BTMBRW1fizGo"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Q5. From Q3 and Q4, which is a stronger correlation?"
+      ],
+      "metadata": {
+        "id": "RsAASFlFizsw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nPoeKWjki008"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Q6. Is there a correlation between the mom’s weight and the dad’s weight?"
+      ],
+      "metadata": {
+        "id": "c1avgW5Xi1MK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8E9_p44kjA1O"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Q7. On average, does the mom’s weight change across the races?"
+      ],
+      "metadata": {
+        "id": "E_lPDmPzjBQ1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AbM92i3XjFuJ"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Q8. Does mom’s smoking pattern change with the mom’s education?"
+      ],
+      "metadata": {
+        "id": "HC-CTen2ys_V"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bLA4fyUx06Bm"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Q9. Does mom’s smoking pattern change with the family income?"
+      ],
+      "metadata": {
+        "id": "F0b6FIXnjHS4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8hh4Cfy4jKy4"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Q10. Is there a relationship between the mom’s race and the dad’s race?"
+      ],
+      "metadata": {
+        "id": "O6T5rtvejLUx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yGmdNnY2jNbn"
       },
       "execution_count": 3,
       "outputs": []
