--- a/examples/maternal-smoking/smoking.ipynb
+++ b/examples/maternal-smoking/smoking.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyO++W4FW0DepwOBufapN57i",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ahmedmoustafa/AUC-Fundamentals-of-Data-Science-II-Spring-2023/blob/main/examples/maternal-smoking/smoking.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,32 +12,29 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Maternal Smoking"
-      ],
       "metadata": {
         "id": "aBg1rOzmEkmp"
-      }
+      },
+      "source": [
+        "# Maternal Smoking"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "xuhWjeg7EeWk"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
-      ],
-      "metadata": {
-        "id": "xuhWjeg7EeWk"
-      },
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df = pd.read_table(\"https://raw.githubusercontent.com/ahmedmoustafa/AUC-Fundamentals-of-Data-Science-II-Spring-2023/main/examples/maternal-smoking/smoking.tsv\")\n",
-        "df.shape"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -61,25 +42,26 @@
         "id": "lwP2QUWcE-qG",
         "outputId": "c5d64511-e103-4ce0-d629-9dcd8d9064fa"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(610, 20)"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df = pd.read_table(\"https://raw.githubusercontent.com/ahmedmoustafa/AUC-Fundamentals-of-Data-Science-II-Spring-2023/main/examples/maternal-smoking/smoking.tsv\")\n",
+        "df.shape"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df.head()"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -88,38 +70,11 @@
         "id": "ZkziwPBjFGpM",
         "outputId": "0242a042-585f-4413-d637-b9ce8947c5e6"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "    id  date  gestation  weight  parity mom.race  mom.age  mom.edu  \\\n",
-              "0   15  1411        284     120       1    asian       27        5   \n",
-              "1   20  1499        282     113       2    white       33        5   \n",
-              "2  100  1673        286     136       4    white       25        2   \n",
-              "3  129  1562        245     132       2    black       23        1   \n",
-              "4  142  1408        289     120       3    white       25        4   \n",
-              "\n",
-              "   mom.height  mom.weight dad.race  dad.age  dad.edu  dad.height  dad.weight  \\\n",
-              "0          62         100    asian       31        5          65         110   \n",
-              "1          64         135    white       38        5          70         148   \n",
-              "2          62          93    white       28        2          64         130   \n",
-              "3          65         140    black       23        4          71         192   \n",
-              "4          62         125    white       26        1          70         180   \n",
-              "\n",
-              "   marital  income            smoke  quit.time  cigs  \n",
-              "0        1       1            never          0     0  \n",
-              "1        1       4            never          0     0  \n",
-              "2        1       4  until_pregnancy          2     2  \n",
-              "3        1       2            never          0     0  \n",
-              "4        0       2            never          0     0  "
-            ],
             "text/html": [
-              "\n",
-              "  <div id=\"df-a22d6291-123b-41bc-a822-511202cc6dec\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
+              "<div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
               "        vertical-align: middle;\n",
@@ -277,269 +232,242 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a22d6291-123b-41bc-a822-511202cc6dec')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    id  date  gestation  weight  parity mom.race  mom.age  mom.edu  \\\n",
+              "0   15  1411        284     120       1    asian       27        5   \n",
+              "1   20  1499        282     113       2    white       33        5   \n",
+              "2  100  1673        286     136       4    white       25        2   \n",
+              "3  129  1562        245     132       2    black       23        1   \n",
+              "4  142  1408        289     120       3    white       25        4   \n",
               "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
+              "   mom.height  mom.weight dad.race  dad.age  dad.edu  dad.height  dad.weight  \\\n",
+              "0          62         100    asian       31        5          65         110   \n",
+              "1          64         135    white       38        5          70         148   \n",
+              "2          62          93    white       28        2          64         130   \n",
+              "3          65         140    black       23        4          71         192   \n",
+              "4          62         125    white       26        1          70         180   \n",
               "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-a22d6291-123b-41bc-a822-511202cc6dec button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a22d6291-123b-41bc-a822-511202cc6dec');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
+              "   marital  income            smoke  quit.time  cigs  \n",
+              "0        1       1            never          0     0  \n",
+              "1        1       4            never          0     0  \n",
+              "2        1       4  until_pregnancy          2     2  \n",
+              "3        1       2            never          0     0  \n",
+              "4        0       2            never          0     0  "
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df.head()"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Q1. Does the mom's smoking pattern affect the newborn birth weight?"
-      ],
       "metadata": {
         "id": "YEvzA3RdX9BD"
-      }
+      },
+      "source": [
+        "## Q1. Does the mom's smoking pattern affect the newborn birth weight?"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "gezYMdWciSuQ"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Q2. Does the mom’s race affect the newborn birth weight?\n"
-      ],
       "metadata": {
         "id": "ES5mZnyhYQ-5"
-      }
+      },
+      "source": [
+        "## Q2. Does the mom’s race affect the newborn birth weight?\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "6fQAD4OkYJr9"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Q3. Is there a correlation between the mom’s weight and the baby’s weight?\n"
-      ],
       "metadata": {
         "id": "3GVJ6vVTYai-"
-      }
+      },
+      "source": [
+        "## Q3. Is there a correlation between the mom’s weight and the baby’s weight?\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "3-K9ReE0iuGZ"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Q4. Is there a correlation between the dad’s weight and the baby’s weight?"
-      ],
       "metadata": {
         "id": "0tlqNIxRiuj1"
-      }
+      },
+      "source": [
+        "## Q4. Is there a correlation between the dad’s weight and the baby’s weight?"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "BTMBRW1fizGo"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Q5. From Q3 and Q4, which is a stronger correlation?"
-      ],
       "metadata": {
         "id": "RsAASFlFizsw"
-      }
+      },
+      "source": [
+        "## Q5. From Q3 and Q4, which is a stronger correlation?"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "nPoeKWjki008"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Q6. Is there a correlation between the mom’s weight and the dad’s weight?"
-      ],
       "metadata": {
         "id": "c1avgW5Xi1MK"
-      }
+      },
+      "source": [
+        "## Q6. Is there a correlation between the mom’s weight and the dad’s weight?"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "8E9_p44kjA1O"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Q7. On average, does the mom’s weight change across the races?"
-      ],
       "metadata": {
         "id": "E_lPDmPzjBQ1"
-      }
+      },
+      "source": [
+        "## Q7. On average, does the mom’s weight change across the races?"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "AbM92i3XjFuJ"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Q8. Does mom’s smoking pattern change with the mom’s education?"
-      ],
       "metadata": {
         "id": "HC-CTen2ys_V"
-      }
+      },
+      "source": [
+        "## Q8. Does mom’s smoking pattern change with the mom’s education?"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "bLA4fyUx06Bm"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Q9. Does mom’s smoking pattern change with the family income?"
-      ],
       "metadata": {
         "id": "F0b6FIXnjHS4"
-      }
+      },
+      "source": [
+        "## Q9. Does mom’s smoking pattern change with the family income?"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "8hh4Cfy4jKy4"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Q10. Is there a relationship between the mom’s race and the dad’s race?"
-      ],
       "metadata": {
         "id": "O6T5rtvejLUx"
-      }
+      },
+      "source": [
+        "## Q10. Is there a relationship between the mom’s race and the dad’s race?"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "yGmdNnY2jNbn"
-      },
-      "execution_count": 3,
-      "outputs": []
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyO++W4FW0DepwOBufapN57i",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
