--- a/examples/patterns.ipynb
+++ b/examples/patterns.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPMxscXDoVAWvoc7LQWih6b",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ahmedmoustafa/AUC-Fundamentals-of-Data-Science-II-Spring-2023/blob/main/examples/patterns.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,15 +12,18 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Patterns"
-      ],
       "metadata": {
         "id": "VLDHmibY_QND"
-      }
+      },
+      "source": [
+        "## Patterns"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Dc_vjqg7_S3z"
+      },
       "source": [
         "## Q1. Write Python program to print the following pattern:\n",
         "\n",
@@ -48,10 +35,15 @@
         "xo\n",
         "o\n",
         "```"
-      ],
-      "metadata": {
-        "id": "Dc_vjqg7_S3z"
-      }
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Method #1"
+      ]
     },
     {
       "cell_type": "code",
@@ -65,8 +57,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "xoxoxo\n",
             "oxoxo\n",
@@ -91,7 +83,42 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Method #2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "xoxoxo\n",
+            "oxoxo\n",
+            "xoxo\n",
+            "oxo\n",
+            "xo\n",
+            "o\n"
+          ]
+        }
+      ],
+      "source": [
+        "string = \"xoxoxo\"\n",
+        "for i in range(len(string)):\n",
+        "    print (string[i:])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "76Gm6KtCAMsC"
+      },
       "source": [
         "## Q2. Write Python program to print the following pattern:\n",
         "\n",
@@ -103,13 +130,41 @@
         "----x+\n",
         "-----x\n",
         "```"
-      ],
-      "metadata": {
-        "id": "76Gm6KtCAMsC"
-      }
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Method #1"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zt5ktsC9_09f",
+        "outputId": "a26bfd93-cce6-415f-a3d0-c3673cef7bc6"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "x++++++\n",
+            "-x+++++\n",
+            "--x++++\n",
+            "---x+++\n",
+            "----x++\n",
+            "-----x+\n",
+            "------x\n"
+          ]
+        }
+      ],
       "source": [
         "n = 7\n",
         "\n",
@@ -122,19 +177,24 @@
         "    else:\n",
         "      print ('-', end = '')\n",
         "  print ()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zt5ktsC9_09f",
-        "outputId": "a26bfd93-cce6-415f-a3d0-c3673cef7bc6"
-      },
-      "execution_count": 2,
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Method #2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "x++++++\n",
             "-x+++++\n",
@@ -145,10 +205,19 @@
             "------x\n"
           ]
         }
+      ],
+      "source": [
+        "n = 7\n",
+        "\n",
+        "for i in range(n):\n",
+        "    print (\"-\" * i, \"x\", \"+\" * (n-i-1), sep = \"\")"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "z2vFg8OZBXWM"
+      },
       "source": [
         "## Q3. Write Python program to print the following pattern:\n",
         "\n",
@@ -163,22 +232,11 @@
         "   ***\n",
         "    *\n",
         "```"
-      ],
-      "metadata": {
-        "id": "z2vFg8OZBXWM"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "n = 5\n",
-        "\n",
-        "for i in range(n):\n",
-        "  print (\" \" * (n-i-1) + \"*\" * (2*i+1))\n",
-        "\n",
-        "for i in range(n-2, -1, -1):\n",
-        "  print (\" \" * (n-i-1) + \"*\" * (2*i+1))"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -186,11 +244,10 @@
         "id": "7SzP3Ye-BNHx",
         "outputId": "d223665a-a34c-4de6-921b-1c9646e3436d"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "    *\n",
             "   ***\n",
@@ -203,7 +260,41 @@
             "    *\n"
           ]
         }
+      ],
+      "source": [
+        "n = 5\n",
+        "\n",
+        "for i in range(n):\n",
+        "  print (\" \" * (n-i-1) + \"*\" * (2*i+1))\n",
+        "\n",
+        "for i in range(n-2, -1, -1):\n",
+        "  print (\" \" * (n-i-1) + \"*\" * (2*i+1))"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPMxscXDoVAWvoc7LQWih6b",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
