--- a/examples/patterns.ipynb
+++ b/examples/patterns.ipynb
@@ -115,6 +115,13 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "76Gm6KtCAMsC"
@@ -214,6 +221,45 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Method #3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "x++++++\n",
+            "-x+++++\n",
+            "--x++++\n",
+            "---x+++\n",
+            "----x++\n",
+            "-----x+\n",
+            "------x\n"
+          ]
+        }
+      ],
+      "source": [
+        "n = 7\n",
+        "\n",
+        "for i in range(n):\n",
+        "    for j in range(i):\n",
+        "       print ('-', end = '')\n",
+        "    print ('x', end = '')\n",
+        "    for j in range(i+1, n):\n",
+        "       print ('+', end  = '')\n",
+        "    print ()"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "z2vFg8OZBXWM"
@@ -236,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
