--- a/examples/patterns.ipynb
+++ b/examples/patterns.ipynb
@@ -115,13 +115,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "76Gm6KtCAMsC"
@@ -217,7 +210,7 @@
         "n = 7\n",
         "\n",
         "for i in range(n):\n",
-        "    print (\"-\" * i, \"x\", \"+\" * (n-i-1), sep = \"\")"
+        "    print (\"-\" * i + \"x\" + \"+\" * (n-i-1))"
       ]
     },
     {
@@ -260,12 +253,53 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Q4. Write Python program to print the following pattern:\n",
+        "\n",
+        "```\n",
+        "    *\n",
+        "   ***\n",
+        "  *****\n",
+        " *******\n",
+        "*********\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "    *\n",
+            "   ***\n",
+            "  *****\n",
+            " *******\n",
+            "*********\n"
+          ]
+        }
+      ],
+      "source": [
+        "n = 5\n",
+        "\n",
+        "for i in range(n):\n",
+        "  print (\" \" * (n-i-1) + \"*\" * (2*i+1))"
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "z2vFg8OZBXWM"
       },
       "source": [
-        "## Q3. Write Python program to print the following pattern:\n",
+        "## Q4. Write Python program to print the following pattern:\n",
         "\n",
         "```\n",
         "    *\n",
@@ -282,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -338,7 +372,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.11.1"
     }
   },
   "nbformat": 4,
