--- a/examples/patterns.ipynb
+++ b/examples/patterns.ipynb
@@ -42,6 +42,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "details>\n",
+        "<summary>Method #1</summary>\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Method #1"
       ]
     },
@@ -80,6 +89,14 @@
         "    else:\n",
         "      print ('o', end = '')\n",
         "  print ()"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "</details>"
       ]
     },
     {
@@ -189,40 +206,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "x++++++\n",
-            "-x+++++\n",
-            "--x++++\n",
-            "---x+++\n",
-            "----x++\n",
-            "-----x+\n",
-            "------x\n"
-          ]
-        }
-      ],
-      "source": [
-        "n = 7\n",
-        "\n",
-        "for i in range(n):\n",
-        "    print (\"-\" * i + \"x\" + \"+\" * (n-i-1))"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Method #3"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 5,
       "metadata": {},
       "outputs": [
@@ -257,7 +240,41 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Q4. Write Python program to print the following pattern:\n",
+        "### Method #3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "x++++++\n",
+            "-x+++++\n",
+            "--x++++\n",
+            "---x+++\n",
+            "----x++\n",
+            "-----x+\n",
+            "------x\n"
+          ]
+        }
+      ],
+      "source": [
+        "n = 7\n",
+        "\n",
+        "for i in range(n):\n",
+        "    print (\"-\" * i + \"x\" + \"+\" * (n-i-1))"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Q3. Write Python program to print the following pattern:\n",
         "\n",
         "```\n",
         "    *\n",
