--- a/examples/patterns.ipynb
+++ b/examples/patterns.ipynb
@@ -20,13 +20,22 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Dc_vjqg7_S3z"
       },
       "source": [
-        "## Q1. Write Python program to print the following pattern:\n",
-        "\n",
+        "Write Python program to print the following pattern:\n",
+        "\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## #1\n",
         "```\n",
         "xoxoxo\n",
         "oxoxo\n",
@@ -35,15 +44,6 @@
         "xo\n",
         "o\n",
         "```"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "details>\n",
-        "<summary>Method #1</summary>\n"
       ]
     },
     {
@@ -96,14 +96,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "</details>"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "### Method #2"
       ]
     },
@@ -132,12 +124,13 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "76Gm6KtCAMsC"
       },
       "source": [
-        "## Q2. Write Python program to print the following pattern:\n",
+        "## #2\n",
         "\n",
         "```\n",
         "x+++++\n",
@@ -206,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -245,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -274,7 +267,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Q3. Write Python program to print the following pattern:\n",
+        "## #3 - Pyramid\n",
         "\n",
         "```\n",
         "    *\n",
@@ -312,11 +305,50 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## #4 - Upside Down Pyramid\n",
+        "\n",
+        "```\n",
+        "*********\n",
+        " *******\n",
+        "  *****\n",
+        "   ***\n",
+        "    *\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " *******\n",
+            "  *****\n",
+            "   ***\n",
+            "    *\n"
+          ]
+        }
+      ],
+      "source": [
+        "n = 5\n",
+        "\n",
+        "for i in range(n-2, -1, -1):\n",
+        "  print (\" \" * (n-i-1) + \"*\" * (2*i+1))"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
         "id": "z2vFg8OZBXWM"
       },
       "source": [
-        "## Q4. Write Python program to print the following pattern:\n",
+        "## #5 - Diamond\n",
         "\n",
         "```\n",
         "    *\n",
@@ -333,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
