--- a/examples/patterns.ipynb
+++ b/examples/patterns.ipynb
@@ -11,23 +11,15 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "VLDHmibY_QND"
       },
       "source": [
-        "## Patterns"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Dc_vjqg7_S3z"
-      },
-      "source": [
-        "Write Python program to print the following pattern:\n",
-        "\n"
+        "# Patterns\n",
+        "\n",
+        "## Write Python program to print the following pattern:"
       ]
     },
     {
@@ -35,7 +27,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## #1\n",
+        "## Patten #1\n",
         "```\n",
         "xoxoxo\n",
         "oxoxo\n",
@@ -130,7 +122,7 @@
         "id": "76Gm6KtCAMsC"
       },
       "source": [
-        "## #2\n",
+        "## Pattern #2\n",
         "\n",
         "```\n",
         "x+++++\n",
@@ -267,7 +259,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## #3 - Pyramid\n",
+        "## Pattern #3 - Pyramid\n",
         "\n",
         "```\n",
         "    *\n",
@@ -307,7 +299,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## #4 - Upside Down Pyramid\n",
+        "## Pattern #4 - Inverted Pyramid\n",
         "\n",
         "```\n",
         "*********\n",
@@ -348,7 +340,7 @@
         "id": "z2vFg8OZBXWM"
       },
       "source": [
-        "## #5 - Diamond\n",
+        "## Pattern #5 - Diamond\n",
         "\n",
         "```\n",
         "    *\n",
