--- a/examples/patterns.ipynb
+++ b/examples/patterns.ipynb
@@ -19,7 +19,9 @@
       "source": [
         "# Patterns\n",
         "\n",
-        "## Write Python program to print the following pattern:"
+        "![Patterned Floor, Sevilla, Spain](https://media.gettyimages.com/id/1182672001/photo/full-frame-shot-of-patterned-floor.jpg?s=2048x2048&w=gi&k=20&c=TE6yzYzNWn_HTAmiWwbpP8NKooNKEbb2l4TuX8s0oUU=)\n",
+        "\n",
+        "## Write Python programs to print the following pattern:"
       ]
     },
     {
