--- a/examples/patterns.ipynb
+++ b/examples/patterns.ipynb
@@ -45,7 +45,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Method #1"
+        "### *Method #1*"
       ]
     },
     {
@@ -90,7 +90,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Method #2"
+        "### *Method #2*"
       ]
     },
     {
@@ -120,6 +120,14 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
         "id": "76Gm6KtCAMsC"
       },
@@ -141,7 +149,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Method #1"
+        "### *Method #1*"
       ]
     },
     {
@@ -188,7 +196,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Method #2"
+        "### *Method #2*"
       ]
     },
     {
@@ -227,7 +235,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Method #3"
+        "### *Method #3*"
       ]
     },
     {
@@ -254,6 +262,14 @@
         "\n",
         "for i in range(n):\n",
         "    print (\"-\" * i + \"x\" + \"+\" * (n-i-1))"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
       ]
     },
     {
@@ -301,6 +317,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "---"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Pattern #4 - Inverted Pyramid\n",
         "\n",
         "```\n",
@@ -333,6 +357,14 @@
         "\n",
         "for i in range(n-2, -1, -1):\n",
         "  print (\" \" * (n-i-1) + \"*\" * (2*i+1))"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
       ]
     },
     {
@@ -392,6 +424,14 @@
         "\n",
         "for i in range(n-2, -1, -1):\n",
         "  print (\" \" * (n-i-1) + \"*\" * (2*i+1))"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
       ]
     }
   ],
