--- a/examples/maternal-smoking/smoking.ipynb
+++ b/examples/maternal-smoking/smoking.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "3  until_pregnancy               124.5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "id": "gezYMdWciSuQ"
    },
@@ -376,7 +376,7 @@
        "<Axes: xlabel='smoke', ylabel='weight'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -393,6 +393,14 @@
    ],
    "source": [
     "sns.boxplot(data = df, x = 'smoke', y = 'weight')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The effects of maternal smoking on newborn weight are clearly illustrated above."
    ]
   },
   {
