Add some comments

--- a/examples/maternal-smoking/smoking.ipynb
+++ b/examples/maternal-smoking/smoking.ipynb
@@ -283,8 +283,57 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's first see how many different smoking patterns exist in the dataset. We will use the `groupby` function to group the rows (records) in the `DataFrame` by the `smoke` column (variable). Then count the number of different row per each smoking pattern using the `size` function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "smoke\n",
+       "never              282\n",
+       "now                216\n",
+       "once_not_now        60\n",
+       "until_pregnancy     52\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('smoke').size()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the above, we can see that there are four different smoking patterns, `never` (282 rows), `once_not_now` (60 rows), `until_pregnancy` (52 rows), and `now` (216 rows)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's look at average (using `median`) baby weights for each of these patterns by grouping them and aggregating them by taking `median` of the `weight`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +394,7 @@
        "3  until_pregnancy               124.5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,12 +408,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From the table above, we can see that the moms who smoked during pregnancy had babies of the lowest birth weight."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Visually"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "id": "gezYMdWciSuQ"
    },
@@ -375,7 +432,7 @@
        "<Axes: xlabel='smoke', ylabel='weight'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -584,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
