--- a/examples/maternal-smoking/smoking.ipynb
+++ b/examples/maternal-smoking/smoking.ipynb
@@ -408,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the table above, we can see that the moms who smoked during pregnancy had babies of the lowest birth weight."
+    "From the table above, we can see that the moms who smoked during pregnancy (`now`) had babies of the lowest birth weight, average of `114.5`."
    ]
   },
   {
