--- a/examples/maternal-smoking/smoking.ipynb
+++ b/examples/maternal-smoking/smoking.ipynb
@@ -460,6 +460,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "ES5mZnyhYQ-5"
