Updated the url to the glioma dataset

--- a/quizzes/quiz2/glioma.ipynb
+++ b/quizzes/quiz2/glioma.ipynb
@@ -54,7 +54,7 @@
         }
       ],
       "source": [
-        "df = pd.read_table(\"glioma.tsv\") # Read and load the tsv data file into a DataFrame\n",
+        "df = pd.read_table(\"https://tinyurl.com/yvcdjcyz\") # Read and load the tsv data file into a DataFrame\n",
         "df.shape"
       ]
     },
