--- a/examples/heights-and-weights/sex_height_weight.ipynb
+++ b/examples/heights-and-weights/sex_height_weight.ipynb
@@ -12,6 +12,14 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Sex, Height, and Weight"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -48,7 +56,7 @@
         }
       ],
       "source": [
-        "df = pd.read_csv(\"https://raw.githubusercontent.com/ahmedmoustafa/AUC-Fundamentals-of-Data-Science-II-Spring-2023/main/examples/heights_weights/heights_weights_sex.csv\")\n",
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/ahmedmoustafa/AUC-Fundamentals-of-Data-Science-II-Spring-2023/main/examples/heights-and-weights/sex_heights_weights.csv\")\n",
         "df.shape"
       ]
     },
@@ -706,7 +714,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.11.1"
     }
   },
   "nbformat": 4,
