Rounded the heights and weights

--- a/examples/heights-and-weights/generate.ipynb
+++ b/examples/heights-and-weights/generate.ipynb
@@ -24,18 +24,18 @@
     "heights = []\n",
     "for gender in genders:\n",
     "    if gender == 'Male':\n",
-    "        height = np.random.normal(loc=175, scale=7)\n",
+    "        height = np.round(np.random.normal(loc=175, scale=7), 1)\n",
     "    else:\n",
-    "        height = np.random.normal(loc=162, scale=6)\n",
+    "        height = np.round(np.random.normal(loc=162, scale=6), 1)\n",
     "    heights.append(height)\n",
     "\n",
     "# Generate random weights based on gender\n",
     "weights = []\n",
     "for gender in genders:\n",
     "    if gender == 'Male':\n",
-    "        weight = np.random.normal(loc=75, scale=10)\n",
+    "        weight = np.round(np.random.normal(loc=75, scale=10), 1)\n",
     "    else:\n",
-    "        weight = np.random.normal(loc=60, scale=8)\n",
+    "        weight = np.round(np.random.normal(loc=60, scale=8), 1)\n",
     "    weights.append(weight)\n",
     "\n",
     "# Create a DataFrame to store the dataset\n",
